Update JLink and JPackage so I now works fine